# Caffe

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sh1r0/caffe_android_demo/: MainActivity.java
caffe/: build.gradle
caffe/src/androidTest/java/com/sh1r0/caffe_android_lib/: ExampleInstrumentedTest.java
caffe/src/main/: AndroidManifest.xml
caffe/src/main/cpp/: CMakeLists.txt  caffe_jni.cpp  caffe_mobile.cpp  caffe_mobile.hpp
caffe/src/test/java/com/sh1r0/caffe_android_lib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
